[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "watt"
version = "0.1.0"
description = "WATT - Web Attack & Threat Telescope. An attack-surface intelligence platform for elite bug bounty recon."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "WATT Project", email = "security@watt.local" }
]
dependencies = [
  "httpx[http2]>=0.27.0",
  "anyio>=4.0.0",
  "pydantic>=2.5.0",
  "typer[all]>=0.12.0",
  "rich>=13.7.0",
  "networkx>=3.2.0",
  "uvloop>=0.19.0; platform_system == 'Linux' or platform_system == 'Darwin'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "coverage>=7.3.0",
  "ruff>=0.3.0",
]

[project.scripts]
watt = "watt.cli.main:app"

